 + New flags: serbia, montenegro
 + Themes: Add fade-in and fade-out effects
 + Themes: Make Sudden Death flakes in Underwater theme rise
 + New taunt chat commands: /bubble, /happy
 + Teach computer players how to ...
 +   - drop mines from a cliff
 +   - use drill strike and piano strike
 +   - use mine strike (0 seconds only)
 * Racer: Resize waypoints in custom-sized drawn maps
 * Mutant: Fix impossible to become mutant after mutant is gone
 * A Classic Fairytale: Mission 1: Fix possibility of getting stuck in “Leap of Faith” section
 * A Space Adventure: The First Stop: Fix broken victory condition when eliminating minions
 * A Space Adventure: Killing the Specialists: Don't award player health if enemy hurts itself
 * Fix many projectiles not being affected by Heavy Wind after turn end
 * Fix hog getting stuck when opening parachute right after a shoryuken digging through land
 * Fix weapon schemes sometimes not being saved properly

Lua:
 + Add RopeKnocking library

====================== 1.0.0 =======================
Highlights:
 + Campaigns now respect your team identity instead of overwriting it
 + Single missions now support team selection and track your progress
 + Challenges track the team's highscores
 + Hand-drawn maps can now be scaled with slider
 + Quick games are more random
 + Homing bee can be used as secondary ammo
 + Can change hedgehog order in The Specialists
 + Turn transition is less hectic
 + Various small HUD improvements
 * Fix wrong key names being displayed in key selection

Gameplay:
 + Quick games are more random: More map types, random team size and difficulty
 + Hand-drawn maps can now be scaled with slider
 + Slightly longer delays between turns to make it easier to follow the game
 + Track high scores in singleplayer challenges
 + Show check mark for completed scenarios, challenges and trainings
 + Training/challenge/scenario menu now supports team selection